Mobile: Add ability to change node and retry during migration

--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -781,7 +781,7 @@
     },
     "migration": {
         "dataMigration": "Data migration",
-        "dataMigrationExplanation": "Due to performance and storage limitations, Trinity is using a new database for storing settings and account data. Please wait while Trinity automatically migrates your existing data",
+        "dataMigrationExplanation": "Due to performance and storage limitations, Trinity is using a new database for storing settings and account data. Please wait while Trinity automatically migrates your existing data.",
         "problemMigratingYourData": "There was a problem migrating your data. Please try again"
     },
     "ledger": {
