--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -454,7 +454,7 @@
     },
     "history": {
         "bundleHashCopied": "Bundle hash copied",
-        "noTransactionsFound": "No transactions found",
+        "noTransactionsFound": "Your transaction history is empty",
         "hideZeroBalance": "Hide zero balance",
         "bundleHashCopiedExplanation": "The bundle hash has been copied to the clipboard.",
         "addressCopied": "Address copied",
@@ -467,8 +467,7 @@
         "retrying": "Retrying",
         "yesterday": "Yesterday",
         "promotingAnotherBundle": "Promoting another bundle",
-        "pleaseWait": "Please wait, Trinity is promoting another bundle.",
-        "noTransactionsInformation": "Your transaction history is empty"
+        "pleaseWait": "Please wait, Trinity is promoting another bundle."
     },
     "accountManagement": {
         "viewSeed": "View seed",
