--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -164,7 +164,8 @@
         "forceUpdateExplanation": "A critical update has been released. Please update the app now.",
         "missingPermission": "File system permission required",
         "missingPermissionExplanation": "Access to the file system is required in order to perform this function.",
-        "swipeToConfirm": "Swipe to confirm"
+        "swipeToConfirm": "Swipe to confirm",
+        "congratulations": "Congratulations"
     },
     "addAdditionalSeed": {
         "seedInvalidChars": "Seed contains invalid characters",
