Add strings to translations

--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -473,7 +473,13 @@
         "retrying": "Retrying",
         "yesterday": "Yesterday",
         "promotingAnotherBundle": "Promoting another bundle",
-        "pleaseWait": "Please wait, Trinity is promoting another bundle."
+        "pleaseWait": "Please wait, Trinity is promoting another bundle.",
+        "typeHelp": "Type !help for available commands",
+        "searchHelpText": "search by bundle hash or message content",
+        "searchHelpValue": "find transactions with exact iota value",
+        "searchHelpUnits": "use units for another amounts",
+        "searchHelpMore": "find transactions with value more than",
+        "searchHelpLess": "find transactions with value less than"
     },
     "accountManagement": {
         "viewSeed": "View seed",
