--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -577,6 +577,7 @@
         "viewSeed": "View Seed",
         "hideSeed": "Hide Seed",
         "notAvailable": "Seed export is not available for {{accountType}} account type",
+        "notAvailableExplanationLedger": "Ledger device uses a secure element chip to store your accounts seed and it is designed to never allow an extraction of the seed.",
         "accountIndex": "Your Ledger account index",
         "accountPage": "Your Ledger account page"
     },
