--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -577,6 +577,7 @@
         "viewSeed": "View Seed",
         "hideSeed": "Hide Seed",
         "notAvailable": "Seed export is not available for {{accountType}} account type",
+        "notAvailableExplanationLedger": "Your ledger device uses a secure element to store your seed. The seed is safely encrypted and does not leave the device.",
         "accountIndex": "Your Ledger account index",
         "accountPage": "Your Ledger account page"
     },
