--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -718,7 +718,10 @@
         "deepLinkingWarning": "Be aware of phishing scams. Make sure the link you open navigates to the official Trinity app.",
         "deepLinkingUpdated": "Deep linking settings",
         "deepLinkingEnabled": "You have enabled deep linking.",
-        "deepLinkingDisabled": "You have disabled deep linking."
+        "deepLinkingDisabled": "You have disabled deep linking.",
+        "deepLinkingInfoTitle": "Deep linking is not enabled",
+        "deepLinkingInfoMessage": "You opened an iota link but deep linking is not enabled."
+
     },
     "updates": {
         "errorRetrievingUpdateData": "Error retrieving update data",
