Shared: Add localised string

--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -461,6 +461,7 @@
     "history": {
         "bundleHashCopied": "Bundle hash copied",
         "noTransactionsFound": "No transactions found",
+        "emptyHistory": "Your transaction history is empty",
         "hideZeroBalance": "Hide zero balance",
         "bundleHashCopiedExplanation": "The bundle hash has been copied to the clipboard.",
         "addressCopied": "Address copied",
