Mobile: Add node settings menu

--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -399,6 +399,7 @@
         "changePassword": "Change password",
         "general": "General settings",
         "advanced": "Advanced settings",
+        "nodeSettings": "Node settings",
         "account": "Account settings",
         "logout": "Log out",
         "reset": "Reset wallet",
