--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -503,7 +503,9 @@
         "mustAddCustomNodes": "You must add at least one custom node before disabling the automatic node list.",
         "nodeEnoughNodesTitle": "Not enough nodes added",
         "nodeEnoughNodesExplanation": "There are not enough nodes to enable quorum.",
-        "nodeEnoughNodesExplanationCustomNodes": "Add more custom nodes or enable the automatic node list."
+        "nodeEnoughNodesExplanationCustomNodes": "Add more custom nodes or enable the automatic node list.",
+        "nodeSettingsUpdatedTitle": "Node settings updated",
+        "nodeSettingsUpdatedExplanation": "You have successfully updated your node settings."
     },
     "addCustomNode": {
         "customNodeCouldNotBeAdded": "Custom node could not be added",
