Desktop: Add send and logout animations

--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -634,7 +634,7 @@
         "noPassword": "Password is not set on device"
     },
     "transferConfirmation": {
-        "youAreAbout": "You are about to send {{contents}} to the address",
+        "youAreAbout": "You are about to send {{contents}}",
         "aMessage": "a message",
         "fromAccount": "From {{selectedAccountName}}",
         "toAddress": "To address",
