--- a/src/shared/locales/en/translation.json
+++ b/src/shared/locales/en/translation.json
@@ -767,6 +767,7 @@
     },
     "updates": {
         "errorRetrievingUpdateData": "Error retrieving update data",
+        "errorRetrievingUpdateDataExplanation": "Could not retrieve update. Please check your internet connection and try again.",
         "noUpdatesAvailable": "No updates available",
         "noUpdatesAvailableExplanation": "You have the latest version of Trinity!",
         "newVersionAvailable": "New version available",
