--- a/src/shared/locales/da/translation.json
+++ b/src/shared/locales/da/translation.json
@@ -364,6 +364,8 @@
         "message": "Besked",
         "invalidMessage": "Ugyldig besked",
         "invalidMessageExplanation": "Dit besked indeholder ugyldige tegn.",
+        "invalidMessageTooLong": "Beskeden for lang",
+        "invalidMessageTooLongExplanation": "Beskeden overskrider tegnbegrænsningen (1093).",
         "send": "Send",
         "invalidAmount": "Forkert beløb indtastet",
         "invalidAmountExplanation": "Angiv et gyldigt posteringsbeløb. Det kan være nyttigt at se IOTAs enhedsforklaring i bunden af denne side.",
